# Updrive

./: README.md
backend/: Dockerfile  app.py  docker-compose.yaml  pyproject.toml  rag_tech.py  rag_tech_new.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: ChatComponent.js  Hero.jsx  Loader.jsx  Navbar.jsx  Uploader.js
frontend/src/pages/: ChatBot.js  index.js
frontend/src/styles/: Chat.module.css  globals.css  loader.module.css
